--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,6 @@
     "apache/log4php": "~2.3.0"
   },
   "require-dev": {
-    "phalcon/ide-stubs": "3.4.*",
-    "eaglewu/swoole-ide-helper": "dev-master"
+    "phalcon/ide-stubs": "3.4.*"
   }
 }
